Bug 671673 - mailnews.sendInBackground tries to send in background even when working offline; r=jik